fix form on mobile

--- a/scss/_customStyle.scss
+++ b/scss/_customStyle.scss
@@ -489,6 +489,11 @@ body {
   font-family: 'Proxima Nova', Georgia, sans-serif;
 }
 
+@media only screen and (max-width: 767px) {
+  .form-control {
+    margin-bottom: 10px;
+  }
+}
 @media only screen and (min-width: 768px) {
   .wss-region-topbar-container #wss-roadside-assistance-button {
     padding: .71rem;
